--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="open">詳細を見る</div>
+    <div id="open" >詳細を見る</div>
 
-    <div id="mask"></div>
+    <div id="mask" class="hidden"></div>
 
-    <section id="modal">
+    <section id="modal" >
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla doloremque similique assumenda laboriosam eius distinctio maiores explicabo. Error nesciunt deleniti delectus impedit animi, eaque voluptatibus illum ratione magni in incidunt.</p>
         <div id="close">閉じる</div>
     </section>
